# hypermodern-python-simon994

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
hypermodern_python_simon994/: console.py  wikipedia.py
tests/: test_console.py  test_hypermodern_python_simon994.py  test_wikipedia.py
