[tool.poetry]
name = "hypermodern-python-simon994"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["SimonN <65023744+Simon994@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Simon994/hypermodern-python-simon994"
repository = "https://github.com/Simon994/hypermodern-python-simon994"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.0"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {version = "^5.3", extras = ["toml"]}
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python_simon994.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
[tool.coverage.run]
branch = true
source = ["hypermodern_python_simon994"]
[tool.coverage.report]
show_missing = true
fail_under = 100